# azure-ai-vision-sdk

./: .gitignore  CONTRIBUTING.md  Classes.html  Enums.html  Extensions.html  GET_FACE_ARTIFACTS_ACCESS.md  GET_LIVENESS_SDK_ACCESS.md  NOTICE.md  Protocols.html  README.md  Structs.html  Type Definitions.html  Typealiases.html  index.html  search.json  undocumented.json
.github/workflows/: build.yml  image-analysis.yml
Classes/: FaceAnalysisOptions.html  FaceAnalyzer.html  FaceAnalyzingResult.html  FaceRecognitionResult.html  VisionCoreHTTPClient.html  VisionCoreUtil.html  VisionFrame.html  VisionFrameFormat.html  VisionFrameWriter.html  VisionServiceOptions.html  VisionSource.html  VisionSourceOptions.html
Enums/: FaceActionRequiredFromApplication.html  FaceAnalyzerMode.html  FaceAnalyzingFeedbackForFace.html  FaceAnalyzingWarning.html  FaceLivenessFailureReason.html  FaceLivenessStatus.html  FaceRecognitionFailureReason.html  FaceRecognitionMode.html  FaceSelectionMode.html  LivenessError.html  RecognitionError.html  RecognitionStatus.html  VisionServiceOption.html
Extensions/: URLSession.html
Protocols/: VisionCoreURLSessionDataTaskProtocol.html  VisionCoreURLSessionProtocol.html  VisionPropertyCollection.html
Structs/: FaceLivenessDetectorView.html  LivenessDetectionSuccess.html
docs/: ubuntu2204-notes.md
docs/Face Identification/: FaceIdentification.md
docs/common/: local-nuget-feed.md
docs/face/: android_api_reference.md  ios_api_reference.md
docs/image-analysis/: Image-Analysis-2023-02-01-preview-API-doc.md
docs/learn.microsoft.com/: README.md
docsets/: AzureAIVisionCore.tgz  AzureAIVisionFace.tgz  AzureAIVisionFaceUI.tgz
quickstart/cpp/image-analysis/: image-analysis-quickstart.cpp
quickstart/cpp/image-analysis/linux/: CMakeLists.txt  README.md  makefile
quickstart/python/image-analysis/: README.md  quickstart.py
samples/: Localization.md
samples/angularjs/face-angularjs/: .env.local  .gitignore
samples/cpp/image-analysis/: README-Linux.md  README-Windows.md  README.md  image-analysis-samples.cpp  main.cpp  samples.cpp  secrets.cpp  secrets.h  stdafx.cpp  stdafx.h
samples/cpp/image-analysis/linux/: CMakeLists.txt  makefile
samples/csharp/image-analysis/: README.md
samples/javascript/: README.md
samples/maui/: Directory.Packages.props  FaceAnalyzerSample.sln  README.md
samples/nextjs/: README.md  SetupEnvironment.md
samples/web/: README.md  SetupEnvironment.md
scripts/: create_face_access_token.ps1  create_face_access_token.sh  diagnose_token.ps1  get_face_access_token.ps1  get_face_access_token.sh
(+513 files in other folders)
